--- a/Contrast Ratio/scss/style.scss
+++ b/Contrast Ratio/scss/style.scss
@@ -121,7 +121,7 @@ main {
 		border-radius: $border-radius;
 		height: 5rem;
 
-		#result-display {
+		.result-display {
 			font-size: 2.5rem;
 			margin: 0;
 			
